# constfilt

./: .clang-format  .coderabbit.yaml  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md  conandata.yml  conanfile.py  constfilt.hpp  constfilt_options.hpp  docker-compose.yml  entrypoint.sh
.github/workflows/: docs.yml  main.yml
cmake/: constfiltConfig.cmake.in
cmake/toolchains/: arm-none-eabi-clang.cmake  arm-none-eabi-gcc.cmake
docs/: Doxyfile  building.md  butterworth.md  discretization.md  elliptic.md  getting-started.md  index.md  methods.md  mkdocs.yml  profiling.md  sos-discretization.md  sos_options.md  verification.md
docs/profiling/results/: accuracy_gcc_15.2.0.csv  compile_times_gcc_15.2.0.csv  runtime_gcc_15.2.0.csv
include/: butterworth.hpp  discretize.hpp  filter.hpp
include/constfilt/: analog_filter.hpp  bessel.hpp  butterworth.hpp  constfilt.hpp  continuous_tf.hpp  discretize.hpp  elliptic.hpp  filter.hpp  gaussian.hpp  legendre_papoulis.hpp  linkwitz_riley.hpp  stability.hpp
include/constfilt/dependencies/consteig/: consteig_options.hpp
include/constfilt/dependencies/consteig/math/: complex.hpp  constmath.hpp
include/constfilt/dependencies/consteig/math/functions/: abs.hpp  complex_exp.hpp  csqrt.hpp  sqrt.hpp  utilities.hpp
include/constfilt/dependencies/consteig/matrix/: decompositions.hpp  matrix.hpp  operations.hpp
include/constfilt/dependencies/consteig/matrix/decompositions/: hessenberg.hpp  qr.hpp
include/constfilt/dependencies/consteig/optional_dependencies/gcem/gcem_incl/: gcem_options.hpp
include/constfilt/dependencies/gcem/gcem_incl/: gcem_type_traits.hpp  mantissa.hpp
octave/: generate_butterworth_tests.m  generate_continuous_tf_tests.m  generate_elliptic_tests.m  ncauer.m
profiling/: CMakeLists.txt  accuracy_reference.hpp  analyze_results.py  bench.cpp  bench_accuracy.cpp  bench_accuracy_common.hpp  bench_accuracy_constfilt.cpp  bench_accuracy_constfilt_bw.cpp  bench_accuracy_constfilt_el.cpp  bench_accuracy_iir1.cpp  bench_accuracy_kfr.cpp  bench_common.hpp  bench_constfilt.cpp  bench_iir1.cpp  bench_kfr.cpp  pyproject.toml  run_profiling.sh
profiling/compile_time/: profile_butterworth_10_matchedz.cpp  profile_butterworth_10_tustin.cpp  profile_butterworth_10_zoh.cpp  profile_butterworth_11_matchedz.cpp  profile_butterworth_11_tustin.cpp  profile_butterworth_11_zoh.cpp  profile_butterworth_12_matchedz.cpp  profile_butterworth_12_tustin.cpp  profile_butterworth_12_zoh.cpp  profile_butterworth_1_matchedz.cpp  profile_butterworth_1_tustin.cpp  profile_butterworth_1_zoh.cpp  profile_butterworth_2_matchedz.cpp  profile_butterworth_2_tustin.cpp  profile_butterworth_2_zoh.cpp  profile_butterworth_4_matchedz.cpp  profile_butterworth_4_tustin.cpp  profile_butterworth_4_zoh.cpp  profile_butterworth_6_matchedz.cpp  profile_butterworth_6_tustin.cpp  profile_butterworth_6_zoh.cpp  profile_butterworth_8_matchedz.cpp  profile_butterworth_8_tustin.cpp  profile_butterworth_8_zoh.cpp  profile_butterworth_9_matchedz.cpp  profile_butterworth_9_tustin.cpp  profile_butterworth_9_zoh.cpp  profile_elliptic_10_matchedz.cpp  profile_elliptic_10_tustin.cpp  profile_elliptic_10_zoh.cpp  profile_elliptic_11_matchedz.cpp  profile_elliptic_11_tustin.cpp  profile_elliptic_11_zoh.cpp  profile_elliptic_12_matchedz.cpp  profile_elliptic_12_tustin.cpp  profile_elliptic_12_zoh.cpp  profile_elliptic_2_matchedz.cpp  profile_elliptic_2_tustin.cpp  profile_elliptic_2_zoh.cpp  profile_elliptic_4_matchedz.cpp  (+11 more)
profiling/octave/: generate_accuracy_reference.m
profiling/results/: accuracy_gcc_15.2.0.csv  compile_times_gcc_15.2.0.csv  runtime_gcc_15.2.0.csv
profiling_dependencies/: CMakeLists.txt
scripts/: fetch_consteig.sh  fetch_gcem.sh  vendor_consteig.sh  vendor_gcem.sh
test_dependencies/: CMakeLists.txt  test_tools.hpp
test_dependencies/gtest_stubs/gtest/: gtest.h
test_package/: CMakeLists.txt  test_package.cpp
tests/: CMakeLists.txt  analog_filter.test.cpp  butterworth.test.cpp  butterworth_reference.hpp  constexpr_asserts.cpp  continuous_tf.test.cpp  continuous_tf_reference.hpp  discretize.test.cpp  elliptic.test.cpp  elliptic_reference.hpp  filter.test.cpp
