################################################################################
# Compile-time probes
# Each .cpp forces static constexpr filter construction; compile time IS the
# benchmark. OBJECT lib = compile only, no link step.
################################################################################
file(GLOB CT_SOURCES "compile_time/profile_*.cpp")
foreach(src ${CT_SOURCES})
    get_filename_component(tgt ${src} NAME_WE)
    add_library(${tgt} OBJECT ${src})
    target_link_libraries(${tgt} PRIVATE constfilt constfilt_warnings)
endforeach()

################################################################################
# Runtime benchmarks (one executable per library)
# KFR requires C++20; consteig vendor headers break under C++20 rules so the
# constfilt and iir1 binaries stay at C++17 in separate translation units.
################################################################################
add_executable(bench_constfilt bench_constfilt.cpp)
target_link_libraries(bench_constfilt PRIVATE constfilt)
set_target_properties(bench_constfilt PROPERTIES
    CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)

if(TARGET iir)
    add_executable(bench_iir1 bench_iir1.cpp)
    target_link_libraries(bench_iir1 PRIVATE iir)
    set_target_properties(bench_iir1 PROPERTIES
        CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
endif()

if(TARGET kfr_dsp)
    add_executable(bench_kfr bench_kfr.cpp)
    target_link_libraries(bench_kfr PRIVATE kfr_dsp)
    set_target_properties(bench_kfr PROPERTIES
        CXX_STANDARD 20 CXX_STANDARD_REQUIRED ON)
elseif(TARGET kfr)
    add_executable(bench_kfr bench_kfr.cpp)
    target_link_libraries(bench_kfr PRIVATE kfr)
    set_target_properties(bench_kfr PROPERTIES
        CXX_STANDARD 20 CXX_STANDARD_REQUIRED ON)
endif()

################################################################################
# Accuracy benchmarks (one executable per library)
# accuracy_reference.hpp is generated by:
#   octave --no-gui profiling/octave/generate_accuracy_reference.m
################################################################################
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/accuracy_reference.hpp")
    add_executable(bench_accuracy_constfilt bench_accuracy_constfilt.cpp)
    target_include_directories(bench_accuracy_constfilt PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR})
    target_link_libraries(bench_accuracy_constfilt PRIVATE constfilt)
    set_target_properties(bench_accuracy_constfilt PROPERTIES
        CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)

    if(TARGET iir)
        add_executable(bench_accuracy_iir1 bench_accuracy_iir1.cpp)
        target_include_directories(bench_accuracy_iir1 PRIVATE
            ${CMAKE_CURRENT_SOURCE_DIR})
        target_link_libraries(bench_accuracy_iir1 PRIVATE iir)
        set_target_properties(bench_accuracy_iir1 PROPERTIES
            CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
    endif()

    if(TARGET kfr_dsp)
        add_executable(bench_accuracy_kfr bench_accuracy_kfr.cpp)
        target_include_directories(bench_accuracy_kfr PRIVATE
            ${CMAKE_CURRENT_SOURCE_DIR})
        target_link_libraries(bench_accuracy_kfr PRIVATE kfr_dsp)
        set_target_properties(bench_accuracy_kfr PROPERTIES
            CXX_STANDARD 20 CXX_STANDARD_REQUIRED ON)
    elseif(TARGET kfr)
        add_executable(bench_accuracy_kfr bench_accuracy_kfr.cpp)
        target_include_directories(bench_accuracy_kfr PRIVATE
            ${CMAKE_CURRENT_SOURCE_DIR})
        target_link_libraries(bench_accuracy_kfr PRIVATE kfr)
        set_target_properties(bench_accuracy_kfr PROPERTIES
            CXX_STANDARD 20 CXX_STANDARD_REQUIRED ON)
    endif()
else()
    message(STATUS
        "profiling/accuracy_reference.hpp not found, skipping accuracy benchmarks. "
        "Run: octave --no-gui profiling/octave/generate_accuracy_reference.m")
endif()
