################################################################################
# External comparison libraries (FetchContent, never committed to repo)
# KFR requires C++20 for its internal CMake tests. Setting the global standard
# here is safe: constfilt and its vendored targets are already defined by this
# point and won't be re-configured.
################################################################################
include(FetchContent)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# iir1: runtime IIR filter design + execution; MIT license
FetchContent_Declare(
    iir1
    GIT_REPOSITORY https://github.com/berndporr/iir1.git
    GIT_TAG        1.9.4
    GIT_SHALLOW    TRUE
)
set(IIR1_BUILD_TESTING OFF CACHE BOOL "" FORCE)
set(IIR1_BUILD_DEMO    OFF CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(iir1)

# KFR: full filter design + SIMD-accelerated execution; GPL v2+
FetchContent_Declare(
    kfr
    GIT_REPOSITORY https://github.com/kfrlib/kfr.git
    GIT_TAG        7.0.1
    GIT_SHALLOW    TRUE
)
set(KFR_ENABLE_TESTS    OFF CACHE BOOL "" FORCE)
set(KFR_ENABLE_EXAMPLES OFF CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(kfr)

################################################################################
# Compile-time probes
# Each .cpp forces static constexpr filter construction; compile time IS the
# benchmark. OBJECT lib = compile only, no link step.
################################################################################
file(GLOB CT_SOURCES "compile_time/profile_*.cpp")
foreach(src ${CT_SOURCES})
    get_filename_component(tgt ${src} NAME_WE)
    add_library(${tgt} OBJECT ${src})
    target_link_libraries(${tgt} PRIVATE constfilt constfilt_warnings)
    set_target_properties(${tgt} PROPERTIES
        CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
endforeach()

################################################################################
# Runtime benchmarks (one executable per library)
# KFR requires C++20; consteig vendor headers break under C++20 rules so the
# constfilt and iir1 binaries stay at C++17 in separate translation units.
################################################################################
add_executable(bench_constfilt bench_constfilt.cpp)
target_link_libraries(bench_constfilt PRIVATE constfilt)
set_target_properties(bench_constfilt PROPERTIES
    CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)

if(TARGET iir)
    add_executable(bench_iir1 bench_iir1.cpp)
    target_link_libraries(bench_iir1 PRIVATE iir)
    set_target_properties(bench_iir1 PROPERTIES
        CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
endif()

if(TARGET kfr_dsp)
    add_executable(bench_kfr bench_kfr.cpp)
    target_link_libraries(bench_kfr PRIVATE kfr_dsp)
    set_target_properties(bench_kfr PROPERTIES
        CXX_STANDARD 20 CXX_STANDARD_REQUIRED ON)
elseif(TARGET kfr)
    add_executable(bench_kfr bench_kfr.cpp)
    target_link_libraries(bench_kfr PRIVATE kfr)
    set_target_properties(bench_kfr PROPERTIES
        CXX_STANDARD 20 CXX_STANDARD_REQUIRED ON)
endif()

################################################################################
# Accuracy benchmarks (one executable per library)
# accuracy_reference.hpp is generated by:
#   octave --no-gui profiling/octave/generate_accuracy_reference.m
################################################################################
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/accuracy_reference.hpp")
    add_executable(bench_accuracy_constfilt
        bench_accuracy_constfilt.cpp
        bench_accuracy_constfilt_bw.cpp
        bench_accuracy_constfilt_el.cpp)
    target_include_directories(bench_accuracy_constfilt PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR})
    target_link_libraries(bench_accuracy_constfilt PRIVATE constfilt)
    # Force runtime evaluation: a tiny ops limit makes the compiler give up
    # constant-folding immediately and generate runtime code instead, which
    # prevents OOM at high N (N=25 ZOH eigendecomposition exhausts cc1plus RAM
    # even with the high limit from constfilt_warnings).
    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
        target_compile_options(bench_accuracy_constfilt PRIVATE
            -fconstexpr-ops-limit=1000)
    elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
        target_compile_options(bench_accuracy_constfilt PRIVATE
            -fconstexpr-steps=1000)
    endif()
    set_target_properties(bench_accuracy_constfilt PROPERTIES
        CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)

    if(TARGET iir)
        add_executable(bench_accuracy_iir1 bench_accuracy_iir1.cpp)
        target_include_directories(bench_accuracy_iir1 PRIVATE
            ${CMAKE_CURRENT_SOURCE_DIR})
        target_link_libraries(bench_accuracy_iir1 PRIVATE iir)
        set_target_properties(bench_accuracy_iir1 PROPERTIES
            CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
    endif()

    if(TARGET kfr_dsp)
        add_executable(bench_accuracy_kfr bench_accuracy_kfr.cpp)
        target_include_directories(bench_accuracy_kfr PRIVATE
            ${CMAKE_CURRENT_SOURCE_DIR})
        target_link_libraries(bench_accuracy_kfr PRIVATE kfr_dsp)
        set_target_properties(bench_accuracy_kfr PROPERTIES
            CXX_STANDARD 20 CXX_STANDARD_REQUIRED ON)
    elseif(TARGET kfr)
        add_executable(bench_accuracy_kfr bench_accuracy_kfr.cpp)
        target_include_directories(bench_accuracy_kfr PRIVATE
            ${CMAKE_CURRENT_SOURCE_DIR})
        target_link_libraries(bench_accuracy_kfr PRIVATE kfr)
        set_target_properties(bench_accuracy_kfr PROPERTIES
            CXX_STANDARD 20 CXX_STANDARD_REQUIRED ON)
    endif()
else()
    message(STATUS
        "profiling/accuracy_reference.hpp not found, skipping accuracy benchmarks. "
        "Run: octave --no-gui profiling/octave/generate_accuracy_reference.m")
endif()
